applets/systemtray: disconnect KConfigLoader signal when instance is about to be deleted

When an applet is about to be deleted, it will save its config
automatically, but in this case the system tray doesn't need to load the
config again.

BUG: 453726